# grpc_playground

./: .gitignore  go.mod  pyproject.toml  run.sh
helloworld/greeter_client/: main.go
helloworld/greeter_server/: main.go
helloworld/helloworld/: helloworld.pb.go  helloworld.proto  helloworld_grpc.pb.go
protos/: helloworld.pb.go  helloworld.proto  helloworld_grpc.pb.go  helloworld_pb2.py  helloworld_pb2_grpc.py
pysrv/: async_greeter_client.py
